2011-08-12  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Fixed typo in last commit, mixed much older typo in
	  get_combo_from_sql() that was causing a printer's margins to be duplicated
	  as combo margins.

2011-08-11  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Working code path for generating ppds from sqlite backend.
	  Required altering several sql to avoid mysql specific behaviour.
	  Removed use of if() function replaced with sql cases, split multistatement
	  Drop table calls into single statement calls.

2011-08-09  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: working creation of overview with sqlite backend. Made three
	  openprinting website specific functions no-op for none mysql dbs.
	  Removed order by binary() from two sql statements.
	
2011-08-08  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Added creation of sqlite database handle.
	
	* DB.pm: Fixed typos in my last commit.

2011-07-29  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Fixed a typo in get_driver(), added the function get_option(),
	  and made the primary get_*() functions take an optional version argument.
	  Version argument then gets passed to xmlParse, defaults to 0, which is
	  compatability with the C programs.

2011-07-22  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.in: Removed unneeded creation of the overview
	  if foomatic-ppdfile is called with a printer for which there is no
	  XML file. Formerly, as printer/driver pairs with a printer without
	  XML entry were not valid, the use of a non-listed printer was
	  assumed to be a typo and a case-insensitive search in the database
	  was done. Now an invalid printer input leads to an error message
	  when requesting the combo, which is much faster, both for getting
	  a PPD for a non-listed valid printer and an error message for an
	  invalid printer.

	* lib/Foomatic/xmlParse.pm: Delete also the "printers_byname" fields