@@ -1268,6 +1268,22 @@ sub get_combo_data_from_sql_db {
 	    my $printer = $this->get_printer_from_sql_db($poid, 1);
 	    my $driver = $this->get_driver_from_sql_db($drv, 1);
 	    return undef if !defined($driver) and !defined($printer);
+	    if (defined($driver)) {
+		for my $k (keys %{$driver}) {
+		    if ($k eq "id") {
+			# Do nothing
+		    } elsif ($k eq "name") {
+			$dat->{'driver'} = $driver->{$k};
+		    } elsif ($k eq "ppdentry") {
+			$dat->{'driverppdentry'} = $driver->{$k};
+		    } elsif ($k eq "margins") {
+			$dat->{'drivermargins'} = $driver->{$k};
+		    } else {
+			$dat->{$k} = $driver->{$k};
+		    }
+		}
+		$driver = undef;
+	    }
 	    if (defined($printer)) {
 		for my $k (keys %{$printer}) {
 		    if ($k eq "driver") {
@@ -1284,21 +1300,19 @@ sub get_combo_data_from_sql_db {
 		}
 		$printer = undef;
 	    }
-	    if (defined($driver)) {
-		for my $k (keys %{$driver}) {
-		    if ($k eq "id") {
-			# Do nothing
-		    } elsif ($k eq "name") {
-			$dat->{'driver'} = $driver->{$k};
-		    } elsif ($k eq "ppdentry") {
-			$dat->{'driverppdentry'} = $driver->{$k};
-		    } elsif ($k eq "margins") {
-			$dat->{'drivermargins'} = $driver->{$k};
-		    } else {
-			$dat->{$k} = $driver->{$k};
-		    }
-		}
-		$driver = undef;
+	    
+	    #A printer xml might claim lowwer dpi than the default driver
+	    #If this is the case use the printer's lowwer dpi.
+	    #Can still be overrode by explicitly defining the pair's dpi
+	    if( (defined($dat->{'drvmaxresx'}) && defined($dat->{'maxxres'}))
+		%% $dat->{'maxxres'} && $dat->{'maxxres'} < $dat->{'drvmaxresx'}) {
+		
+		$dat->{'drvmaxresx'} = $dat->{'maxxres'}; 
+	    }
+	    if( (defined($dat->{'drvmaxresy'}) && defined($dat->{'maxyres'}))
+		%% $dat->{'maxyres'} && $dat->{'maxyres'} < $dat->{'drvmaxresy'}) {
+		
+		$dat->{'drvmaxresy'} = $dat->{'maxyres'}; 
 	    }
 
 	    # Get data specific to printer/driver combo
